[gd_scene load_steps=6 format=3 uid="uid://geilakxinhul"]

[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/menu_theme.tres" id="1_2xsvu"]
[ext_resource type="Script" uid="uid://dqpc5hj803f5y" path="res://scene_camera_menu.gd" id="1_hvork"]
[ext_resource type="PackedScene" uid="uid://cr88nkt47umul" path="res://ui/setting_vec3.tscn" id="3_nfeie"]
[ext_resource type="PackedScene" uid="uid://d2wnq8ai2ykus" path="res://ui/setting_vec2.tscn" id="4_tmlck"]
[ext_resource type="PackedScene" uid="uid://b1r8nehsgp111" path="res://ui/setting_number.tscn" id="5_fqmu6"]

[node name="SceneCameraMenu" type="PanelContainer"]
custom_minimum_size = Vector2(400, 0)
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("1_2xsvu")
theme_type_variation = &"SubmenuPanelContainer"
script = ExtResource("1_hvork")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.75)
theme_override_constants/line_separation = 8
bbcode_enabled = true
text = "[center][i]Hold RIGHT CLICK to enable WASD/Mouse controls[/i][/center]"
fit_content = true

[node name="Setting_Position" parent="VBoxContainer" instance=ExtResource("3_nfeie")]
unique_name_in_owner = true
layout_mode = 2
min_value = Vector3(-100, -100, -100)
show_updown_arrows = true
suffix = "m"
setting_name = "Position"
setting_name_min_width = 50

[node name="Setting_Angle" parent="VBoxContainer" instance=ExtResource("4_tmlck")]
unique_name_in_owner = true
layout_mode = 2
value = Vector2(3.35276e-07, 3.35276e-07)
min_value = Vector2(-360, -360)
max_value = Vector2(360, 360)
show_updown_arrows = true
prefix_x = "P"
prefix_y = "Y"
suffix = "deg"
setting_name = "Angle"
setting_name_min_width = 50

[node name="Setting_Focus" parent="VBoxContainer" instance=ExtResource("4_tmlck")]
unique_name_in_owner = true
layout_mode = 2
value = Vector2(9.31323e-09, 4.65661e-10)
min_value = Vector2(-10, -0.5)
show_updown_arrows = true
prefix_x = "L"
prefix_y = "W"
suffix = "m"
setting_name = "Focus"
setting_name_min_width = 50

[node name="Setting_Blur" parent="VBoxContainer" instance=ExtResource("5_fqmu6")]
unique_name_in_owner = true
layout_mode = 2
max_value = 4.0
step = 0.01
setting_name = "Blur"
setting_name_min_width = 50

[node name="Button_Finish" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonGreen"
text = "Finish"
